# blocktrail-recovery

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  backup.example.txt  backup.txt
src/: backup.rs  config.rs  decrypt.rs  derive.rs  lib.rs  main.rs
tests/: vectors.rs
