[package]
name = "blocktrail-recover"
version = "0.1.0"
edition = "2021"
description = "Offline recovery of a BlockTrail (BTC.com) 2-of-3 P2SH wallet"
license = "MIT"

[[bin]]
name = "blocktrail-recover"
path = "src/main.rs"

[lib]
name = "blocktrail_recover"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.32"
bip39 = "2.1"
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = "0.12"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zeroize = "1"
